# EdgionCenter

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
bins/edgion-center-kubernetes/: Cargo.toml
bins/edgion-center-kubernetes/src/: config.rs  lib.rs  main.rs
bins/edgion-center-standalone/: Cargo.toml
bins/edgion-center-standalone/src/: lib.rs  main.rs
bins/edgion-center-standalone/src/cli/: mod.rs
bins/edgion-center-standalone/src/common/: mod.rs
bins/edgion-center-standalone/src/common/db_auth/: handlers.rs  mod.rs
bins/edgion-center-standalone/src/config/: mod.rs
bins/edgion-center-standalone/src/fed_sync/: mod.rs
bins/edgion-center-standalone/src/store/: mod.rs
crates/center-adapter-aws-waf/: Cargo.toml
crates/center-adapter-aws-waf/src/: api.rs  aws_sdk.rs  lib.rs  model.rs  tests.rs
crates/center-adapter-cloudflare/: Cargo.toml
crates/center-adapter-cloudflare/src/: http.rs  lib.rs  load_balancing.rs  origin_rules.rs  waf.rs
crates/center-adapter-cloudfront/: Cargo.toml
crates/center-adapter-cloudfront/catalog/: aws-cloudfront-aliases-v1.json
crates/center-adapter-cloudfront/src/: api.rs  authority.rs  aws_sdk.rs  behaviors.rs  catalog.rs  domains.rs  invalidations.rs  lib.rs  model.rs  mutations.rs  origins.rs  tests.rs  wire_fidelity.rs
crates/center-adapter-cloudfront/tests/: aws_sdk_transport.rs
crates/center-adapter-credential-files/: Cargo.toml
crates/center-adapter-credential-files/src/: lib.rs
crates/center-adapter-dns-verifier/: Cargo.toml
crates/center-adapter-dns-verifier/src/: dnssec.rs  lib.rs  transport.rs  verifier.rs
crates/center-adapter-dns-verifier/tests/: transport.rs  verifier.rs
crates/center-adapter-google-cloud-dns/: Cargo.toml  IAM.md  REAL_PROJECT_TESTS.md
crates/center-adapter-google-cloud-dns/src/: api.rs  http.rs  lib.rs  model.rs  tests.rs
crates/center-adapter-google-cloud-dns/tests/: real_project.rs
crates/center-adapter-kubernetes/: Cargo.toml
crates/center-adapter-kubernetes/src/: cloud_capability_crd.rs  cloud_capability_store.rs  cloud_operation_crd.rs  cloud_operation_store.rs  controller_directory.rs  crd.rs  lease.rs  lib.rs  owner_locator.rs  provider_account_crd.rs  provider_account_store.rs  sar.rs  stdout_audit.rs
crates/center-adapter-kubernetes/tests/: real_cluster.rs
crates/center-adapter-route53/: Cargo.toml  REAL_ACCOUNT_TESTS.md
crates/center-adapter-route53/src/: api.rs  aws_sdk.rs  lib.rs  model.rs  tests.rs
crates/center-adapter-route53/tests/: aws_sdk_transport.rs  real_account.rs
crates/center-adapter-sql/: Cargo.toml
crates/center-adapter-sql/src/: audit.rs  cloud_capabilities.rs  cloud_operations.rs  controllers.rs  lib.rs  provider_accounts.rs  users.rs
crates/center-adapter-sql/src/migrations/mysql/: 0001_controllers.sql  0004_controller_sessions.sql  0005_controller_eviction_fence.sql  0006_cloud_operations.sql  0007_cloud_capability_snapshots.sql  0008_cloud_provider_accounts.sql
crates/center-adapter-sql/src/migrations/sqlite/: 0001_controllers.sql  0002_audit_log.sql  0003_users_roles.sql  0005_controller_eviction_fence.sql  0006_cloud_operations.sql  0007_cloud_capability_snapshots.sql  0008_cloud_provider_accounts.sql
crates/center-app/: Cargo.toml
crates/center-app/src/: fed_sync.rs  lib.rs
crates/center-app/src/api/: audit.rs  aws_waf.rs  cloudflare_dns.rs  cloudflare_waf.rs  cloudfront.rs  consistency_handlers.rs  global_connection_ip_restriction_handlers.rs  mod.rs  provider_accounts.rs  provider_capabilities.rs  provider_credential_inspections.rs  region_route_handlers.rs  roles.rs  route53_dns.rs  users.rs  web.rs
crates/center-app/src/common/: grpc_tls.rs  mod.rs  startup.rs
crates/center-app/src/common/api/: compose.rs  ip_acceptor.rs  ip_allowlist.rs  ip_matcher.rs  mod.rs  types.rs
crates/center-app/src/common/audit/: middleware.rs  mod.rs
crates/center-app/src/common/auth/: config.rs  jwt_middleware.rs  mod.rs  oidc.rs  public_paths.rs  session.rs
crates/center-app/src/common/authz/: catalog.rs  middleware.rs  mod.rs
crates/center-app/src/common/config/: mod.rs
crates/center-app/src/common/fed_sync/: mod.rs
crates/center-app/src/common/local_auth/: config.rs  handlers.rs  middleware.rs  mod.rs  status.rs
crates/center-app/src/common/observe/: cloud_metrics.rs  metrics_api.rs  mod.rs  system_metrics.rs
crates/center-core/: Cargo.toml
crates/center-core/src/: admin.rs  audit.rs  authz.rs  capabilities.rs  cloud.rs  controller.rs  coordination.rs  error.rs  lib.rs
crates/center-core/src/cloud/: capabilities.rs  capability_store_conformance.rs  credentials.rs  direct_call.rs  dns.rs  dns_provider_conformance.rs  dns_verification.rs  operations.rs  origin.rs  provider_account_store_conformance.rs  provider_accounts.rs  provider_errors.rs  status.rs  zone_lifecycle.rs
crates/center-integration-aws-waf/: Cargo.toml
crates/center-integration-aws-waf/src/: lib.rs  ownership.rs
crates/center-integration-cloudflare/: Cargo.toml
crates/center-integration-cloudflare/src/: dns_admin.rs  dns_admin_service.rs  dns_write_service.rs  lib.rs  tests.rs  waf_admin_service.rs
crates/center-integration-cloudfront/: Cargo.toml
crates/center-integration-cloudfront/src/: lib.rs
crates/center-integration-route53/: Cargo.toml
crates/center-integration-route53/src/: dns_admin.rs  dns_admin_service.rs  dns_admin_service_tests.rs  dns_write_service.rs  lib.rs  zone_lifecycle_service.rs
crates/center-runtime/: Cargo.toml  build.rs
crates/center-runtime/proto/: fed_sync.proto  internal_forwarding.proto
crates/center-runtime/src/: aggregator.rs  commander.rs  eviction.rs  lib.rs  metadata_store.rs  poll.rs  proxy.rs
crates/center-runtime/src/cloud/: capability_discovery.rs  credential_inspection.rs  mod.rs  worker.rs
crates/center-runtime/src/federation/: config.rs  mod.rs  registry.rs  server.rs  spiffe.rs
crates/center-runtime/src/internal_forwarding/: mod.rs
crates/center-runtime/src/observe/: fed_metrics.rs  mod.rs
crates/center-runtime/src/watch_cache/: cache.rs  mod.rs  registry.rs
(+576 files in other folders)
