[workspace]
members = [
    "crates/center-core",
    "crates/center-runtime",
    "crates/center-app",
    "crates/center-adapter-sql",
    "crates/center-adapter-kubernetes",
    "bins/edgion-center-standalone",
    "bins/edgion-center-kubernetes",
]
default-members = [
    "bins/edgion-center-standalone",
    "bins/edgion-center-kubernetes",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pandalaa"]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
kube = { version = "2.0.1", features = ["client", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"] }
