[workspace]
members = [
    "crates/center-core",
    "crates/center-runtime",
    "crates/center-app",
    "crates/center-adapter-sql",
    "crates/center-adapter-kubernetes",
    "crates/center-adapter-cloudflare",
    "crates/center-adapter-route53",
    "crates/center-adapter-cloudfront",
    "crates/center-adapter-aws-waf",
    "crates/center-adapter-dns-verifier",
    "crates/center-adapter-credential-files",
    "crates/center-integration-cloudflare",
    "crates/center-integration-route53",
    "crates/center-integration-aws-waf",
    "crates/center-integration-cloudfront",
    "bins/edgion-center-standalone",
    "bins/edgion-center-kubernetes",
]
default-members = [
    "bins/edgion-center-standalone",
    "bins/edgion-center-kubernetes",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pandalaa"]

[workspace.dependencies]
async-trait = "0.1"
aws-config = { version = "1.9", features = ["behavior-version-latest"] }
aws-credential-types = "1.3"
aws-sdk-route53 = "1.116"
aws-sdk-cloudfront = "=1.124.0"
aws-sdk-wafv2 = "=1.116.0"
aws-sdk-sts = "1.108"
aws-types = "1.4"
idna = "1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12"
http = "1"
zeroize = "1.8"
cap-std = "=4.0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "http2"] }
hickory-proto = { version = "0.26.1", features = ["dnssec-ring"] }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["dnssec-ring", "tokio"] }
rand = "0.9"
kube = { version = "2.0.1", features = ["client", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"] }
