[package]
name = "edgion-center-adapter-aws-waf"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "Amazon WAFv2 infrastructure adapter for Edgion Center"

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-sts.workspace = true
aws-sdk-wafv2.workspace = true
aws-types.workspace = true
edgion-center-core = { path = "../center-core" }
serde.workspace = true
tokio = { version = "1.49", features = ["time"] }

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
