[package]
name = "edgion-center-adapter-cloudfront"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "Amazon CloudFront infrastructure adapter for Edgion Center"

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-acm.workspace = true
aws-sdk-cloudfront.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types = { version = "1.6", features = ["http-body-1-x"] }
edgion-center-core = { path = "../center-core" }
hmac.workspace = true
http-body-util = "0.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { version = "1.49", features = ["time"] }
url = "2.5"
zeroize.workspace = true

[dev-dependencies]
aws-smithy-async = { version = "1.3", features = ["test-util"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
