[package]
name = "edgion-center-adapter-cloudfront"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "Amazon CloudFront infrastructure adapter for Edgion Center"

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-cloudfront.workspace = true
aws-sdk-sts.workspace = true
edgion-center-core = { path = "../center-core" }
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
tokio = { version = "1.49", features = ["time"] }
url = "2.5"
zeroize.workspace = true
xmlparser = "=0.13.6"

[dev-dependencies]
aws-credential-types.workspace = true
aws-smithy-http-client = "=1.2.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
