[package]
name = "edgion-center-adapter-credential-files"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Capability-confined mounted credential resolver for Edgion Center"

[dependencies]
edgion-center-core = { path = "../center-core" }
cap-std.workspace = true
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
tokio = { version = "1.49", features = ["rt"] }
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
tokio = { version = "1.49", features = ["fs", "macros", "rt-multi-thread"] }
