[package]
name = "edgion-center-adapter-google-cloud-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "Google Cloud DNS infrastructure adapter for Edgion Center"

[dependencies]
async-trait.workspace = true
base64.workspace = true
edgion-center-core = { path = "../center-core" }
hmac.workspace = true
google-cloud-auth.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zeroize.workspace = true
tokio = { version = "1.49", features = ["time"] }

[dev-dependencies]
edgion-center-core = { path = "../center-core", features = ["test-support"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
