[package]
name = "edgion-center-adapter-route53"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "Amazon Route 53 infrastructure adapter for Edgion Center"

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-route53.workspace = true
aws-sdk-sts.workspace = true
aws-types.workspace = true
base64.workspace = true
edgion-center-core = { path = "../center-core" }
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url = "2.5"
zeroize.workspace = true

[dev-dependencies]
aws-smithy-async = { version = "1.3", features = ["test-util"] }
edgion-center-core = { path = "../center-core", features = ["test-support"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
