[package]
name = "edgion-center-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[features]
test-support = []

[dependencies]
async-trait.workspace = true
idna.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt"] }
