[package]
name = "edgion-center-integration-cloudfront"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "CloudFront Distribution Admin API composition for Edgion Center"

[dependencies]
async-trait.workspace = true
edgion-center-adapter-cloudfront = { path = "../center-adapter-cloudfront" }
edgion-center-adapter-aws-waf = { path = "../center-adapter-aws-waf" }
edgion-center-adapter-credential-files = { path = "../center-adapter-credential-files" }
edgion-center-app = { path = "../center-app", default-features = false }
edgion-center-core = { path = "../center-core" }
serde.workspace = true
tokio = { version = "1.49", features = ["sync", "time"] }

[dev-dependencies]
serde_yaml = "0.9"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
