[package]
name = "edgion-center-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[features]
test-support = []

[dependencies]
async-trait.workspace = true
anyhow = "1.0"
edgion-center-core = { path = "../center-core" }
edgion-resources = { path = "../../../Edgion/edgion-resources" }
http = "1.4"
metrics = "0.24"
parking_lot = "0.12"
prost = "0.13"
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { version = "1.49", features = ["sync", "time"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.12", features = ["tls"] }
tracing = "0.1"
uuid = { version = "1.19", features = ["v4"] }
x509-parser = { version = "0.18", features = ["verify"] }

[dev-dependencies]
rcgen = { version = "0.14.7", features = ["x509-parser"] }
tokio = { version = "1.49", features = ["macros", "rt"] }

[build-dependencies]
tonic-build = "0.12"
